--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ redis==5.0.1
 PyMuPDF==1.23.8
 python-docx==1.1.0
 httpx
+psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic-settings==2.1.0
 aiofiles==23.2.1
