--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,3 @@
-# backend/requirements.txt
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 python-telegram-bot==21.0
@@ -9,11 +8,11 @@ python-multipart==0.0.6
 python-dotenv==1.0.0
 google-generativeai==0.3.2
 redis==5.0.1
-PyMuPDF==1.23.8
 python-docx==1.1.0
-httpx
+httpx==0.26.0
 psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic-settings==2.1.0
 aiofiles==23.2.1
 Pillow==10.2.0
+pypdf==4.0.1
