--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,7 @@ python-dotenv==1.0.0
 google-generativeai==0.3.2
 redis==5.0.1
 python-docx==1.1.0
-httpx==0.26.0
+httpx
 psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic-settings==2.1.0
