--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
       pip install -r requirements.txt
       cd ../frontend && npm install && npm run build
       cp -r dist ../backend/static
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    startCommand: alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: DATABASE_URL
         fromDatabase:
